Breadcrumb updated + 500 Internal Server Error edge case added

--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -3,6 +3,9 @@
         "msg": "Sembla que aquesta pàgina no existeix…",
         "msgButton": "Torna a l'inici"
     },
+    "500": {
+        "msg": "Error intern del servidor"
+    },
     "login": {
         "title": "Identificació",
         "email": "Correu",
